Added training test
+ Using Capataz and Inveniemus.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"ludorum": "~0.2.0"
 	},
 	"devDependencies": {
-		"creatartis-grunt": "~0.0.3"
+		"creatartis-grunt": "~0.0.3",
+		"capataz-inveniemus": "~0.0.1"
 	},
 	"scripts": {}
 }
