--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
 	],
 	"dependencies": {
 		"creatartis-base": "~0.1.7",
-		"sermat": "~0.0.8",
-		"ludorum": "~0.2.0"
+		"ludorum": "~0.2.0",
+		"sermat": "~0.0.8"
 	},
 	"devDependencies": {
+		"source-map-support": "~0.4.18",
 		"creatartis-grunt": "~0.0.5",
 		"capataz-inveniemus": "~0.0.1",
 		"@creatartis/ludorum-game-mancala": "~0.1.0"
