--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
 	},
 	"contributors": [],
 	"keywords": [],
-	"license": {
-		"type": "MIT",
-		"url": "https://github.com/LeonardoVal/ludorum-player-ml.js/LICENSE.md"
-	},
+	"license": "MIT",
 	"repository": {},
 	"homepage": "https://github.com/LeonardoVal/ludorum-player-ml.js",
 	"bugs": {
@@ -30,10 +27,12 @@
 		"sermat": "~0.0.8"
 	},
 	"devDependencies": {
-		"source-map-support": "~0.4.18",
+		"@creatartis/ludorum-game-mancala": "~0.1.1",
+		"capataz": "0.1.7-beta",
+		"capataz-inveniemus": "0.0.2",
 		"creatartis-grunt": "~0.0.10",
-		"capataz-inveniemus": "~0.0.1",
-		"@creatartis/ludorum-game-mancala": "~0.1.1"
+		"inveniemus": "~0.2.0",
+		"source-map-support": "~0.4.18"
 	},
 	"scripts": {}
 }
