--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
 	},
 	"devDependencies": {
 		"@creatartis/ludorum-game-mancala": "~0.1.1",
-		"capataz": "0.1.7-beta",
+		"capataz-inveniemus": "~0.0.2",
 		"creatartis-grunt": "~0.0.15",
-		"inveniemus": "~0.2.0",
 		"source-map-support": "~0.4.18"
 	},
 	"scripts": {}
